Changing classes name to Xmas theme Removing test <h2>

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
         <img class="snowflake" src="Assets/Images/Snowflake.png">
       </div>
       <div class="card-front card-face">
-        <img class="cob-web cob-web-top-left" src="Assets/Images/SnowBorder.png">
-        <img class="cob-web cob-web-top-right" src="Assets/Images/SnowBorder.png">
-        <img class="cob-web cob-web-bottom-left" src="Assets/Images/SnowBorder.png">
-        <img class="cob-web cob-web-bottom-right" src="Assets/Images/SnowBorder.png">
+        <img class="snowflakeFront snowflakeFront-top-left" src="Assets/Images/SnowBorder.png">
+        <img class="snowflakeFront snowflakeFront-top-right" src="Assets/Images/SnowBorder.png">
+        <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
+        <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
         <img class="card-value" src="Assets/Images/Santa.png">
       </div>
     </div>
@@ -50,10 +50,10 @@
         <img class="snowflake" src="Assets/Images/Snowflake.png">
       </div>
       <div class="card-front card-face">
-        <img class="cob-web cob-web-top-left" src="Assets/Images/SnowBorder.png">
-        <img class="cob-web cob-web-top-right" src="Assets/Images/SnowBorder.png">
-        <img class="cob-web cob-web-bottom-left" src="Assets/Images/SnowBorder.png">
-        <img class="cob-web cob-web-bottom-right" src="Assets/Images/SnowBorder.png">
+        <img class="snowflakeFront snowflakeFront-top-left" src="Assets/Images/SnowBorder.png">
+        <img class="snowflakeFront snowflakeFront-top-right" src="Assets/Images/SnowBorder.png">
+        <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
+        <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
         <img class="card-value" src="Assets/Images/Santa.png">
       </div>
     </div>
@@ -62,10 +62,10 @@
         <img class="snowflake" src="Assets/Images/Snowflake.png">
       </div>
       <div class="card-front card-face">
-        <img class="cob-web cob-web-top-left" src="Assets/Images/SnowBorder.png">
-        <img class="cob-web cob-web-top-right" src="Assets/Images/SnowBorder.png">
-        <img class="cob-web cob-web-bottom-left" src="Assets/Images/SnowBorder.png">
-        <img class="cob-web cob-web-bottom-right" src="Assets/Images/SnowBorder.png">
+        <img class="snowflakeFront snowflakeFront-top-left" src="Assets/Images/SnowBorder.png">
+        <img class="snowflakeFront snowflakeFront-top-right" src="Assets/Images/SnowBorder.png">
+        <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
+        <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
         <img class="card-value" src="Assets/Images/Gift.png">
       </div>
     </div>
@@ -74,10 +74,10 @@
         <img class="snowflake" src="Assets/Images/Snowflake.png">
       </div>
       <div class="card-front card-face">
-        <img class="cob-web cob-web-top-left" src="Assets/Images/SnowBorder.png">
-        <img class="cob-web cob-web-top-right" src="Assets/Images/SnowBorder.png">
-        <img class="cob-web cob-web-bottom-left" src="Assets/Images/SnowBorder.png">
-        <img class="cob-web cob-web-bottom-right" src="Assets/Images/SnowBorder.png">
+        <img class="snowflakeFront snowflakeFront-top-left" src="Assets/Images/SnowBorder.png">
+        <img class="snowflakeFront snowflakeFront-top-right" src="Assets/Images/SnowBorder.png">
+        <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
+        <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
         <img class="card-value" src="Assets/Images/Gift.png">
       </div>
     </div>
@@ -86,23 +86,10 @@
         <img class="snowflake" src="Assets/Images/Snowflake.png">
       </div>
       <div class="card-front card-face">
-        <img class="cob-web cob-web-top-left" src="Assets/Images/SnowBorder.png">
-        <img class="cob-web cob-web-top-right" src="Assets/Images/SnowBorder.png">
-        <img class="cob-web cob-web-bottom-left" src="Assets/Images/SnowBorder.png">
-        <img class="cob-web cob-web-bottom-right" src="Assets/Images/SnowBorder.png">
-        <img class="card-value" src="Assets/Images/Tree.png">
-        <h2>Christmas Tree</h2>
-      </div>
-    </div>
-    <div class="card">
-      <div class="card-back card-face">
-        <img class="snowflake" src="Assets/Images/Snowflake.png">
-      </div>
-      <div class="card-front card-face">
-        <img class="cob-web cob-web-top-left" src="Assets/Images/SnowBorder.png">
-        <img class="cob-web cob-web-top-right" src="Assets/Images/SnowBorder.png">
-        <img class="cob-web cob-web-bottom-left" src="Assets/Images/SnowBorder.png">
-        <img class="cob-web cob-web-bottom-right" src="Assets/Images/SnowBorder.png">
+        <img class="snowflakeFront snowflakeFront-top-left" src="Assets/Images/SnowBorder.png">
+        <img class="snowflakeFront snowflakeFront-top-right" src="Assets/Images/SnowBorder.png">
+        <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
+        <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
         <img class="card-value" src="Assets/Images/Tree.png">
       </div>
     </div>
@@ -111,10 +98,22 @@
         <img class="snowflake" src="Assets/Images/Snowflake.png">
       </div>
       <div class="card-front card-face">
-        <img class="cob-web cob-web-top-left" src="Assets/Images/SnowBorder.png">
-        <img class="cob-web cob-web-top-right" src="Assets/Images/SnowBorder.png">
-        <img class="cob-web cob-web-bottom-left" src="Assets/Images/SnowBorder.png">
-        <img class="cob-web cob-web-bottom-right" src="Assets/Images/SnowBorder.png">
+        <img class="snowflakeFront snowflakeFront-top-left" src="Assets/Images/SnowBorder.png">
+        <img class="snowflakeFront snowflakeFront-top-right" src="Assets/Images/SnowBorder.png">
+        <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
+        <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
+        <img class="card-value" src="Assets/Images/Tree.png">
+      </div>
+    </div>
+    <div class="card">
+      <div class="card-back card-face">
+        <img class="snowflake" src="Assets/Images/Snowflake.png">
+      </div>
+      <div class="card-front card-face">
+        <img class="snowflakeFront snowflakeFront-top-left" src="Assets/Images/SnowBorder.png">
+        <img class="snowflakeFront snowflakeFront-top-right" src="Assets/Images/SnowBorder.png">
+        <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
+        <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
         <img class="card-value" src="Assets/Images/Reindeer.png">
       </div>
     </div>
@@ -123,10 +122,10 @@
         <img class="snowflake" src="Assets/Images/Snowflake.png">
       </div>
       <div class="card-front card-face">
-        <img class="cob-web cob-web-top-left" src="Assets/Images/SnowBorder.png">
-        <img class="cob-web cob-web-top-right" src="Assets/Images/SnowBorder.png">
-        <img class="cob-web cob-web-bottom-left" src="Assets/Images/SnowBorder.png">
-        <img class="cob-web cob-web-bottom-right" src="Assets/Images/SnowBorder.png">
+        <img class="snowflakeFront snowflakeFront-top-left" src="Assets/Images/SnowBorder.png">
+        <img class="snowflakeFront snowflakeFront-top-right" src="Assets/Images/SnowBorder.png">
+        <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
+        <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
         <img class="card-value" src="Assets/Images/Reindeer.png">
       </div>
     </div>
@@ -135,10 +134,10 @@
         <img class="snowflake" src="Assets/Images/Snowflake.png">
       </div>
       <div class="card-front card-face">
-        <img class="cob-web cob-web-top-left" src="Assets/Images/SnowBorder.png">
-        <img class="cob-web cob-web-top-right" src="Assets/Images/SnowBorder.png">
-        <img class="cob-web cob-web-bottom-left" src="Assets/Images/SnowBorder.png">
-        <img class="cob-web cob-web-bottom-right" src="Assets/Images/SnowBorder.png">
+        <img class="snowflakeFront snowflakeFront-top-left" src="Assets/Images/SnowBorder.png">
+        <img class="snowflakeFront snowflakeFront-top-right" src="Assets/Images/SnowBorder.png">
+        <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
+        <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
         <img class="card-value" src="Assets/Images/Snow.jpg">
       </div>
     </div>
@@ -147,10 +146,10 @@
         <img class="snowflake" src="Assets/Images/Snowflake.png">
       </div>
       <div class="card-front card-face">
-        <img class="cob-web cob-web-top-left" src="Assets/Images/SnowBorder.png">
-        <img class="cob-web cob-web-top-right" src="Assets/Images/SnowBorder.png">
-        <img class="cob-web cob-web-bottom-left" src="Assets/Images/SnowBorder.png">
-        <img class="cob-web cob-web-bottom-right" src="Assets/Images/SnowBorder.png">
+        <img class="snowflakeFront snowflakeFront-top-left" src="Assets/Images/SnowBorder.png">
+        <img class="snowflakeFront snowflakeFront-top-right" src="Assets/Images/SnowBorder.png">
+        <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
+        <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
         <img class="card-value" src="Assets/Images/Snow.jpg">
       </div>
     </div>
@@ -159,10 +158,10 @@
         <img class="snowflake" src="Assets/Images/Snowflake.png">
       </div>
       <div class="card-front card-face">
-        <img class="cob-web cob-web-top-left" src="Assets/Images/SnowBorder.png">
-        <img class="cob-web cob-web-top-right" src="Assets/Images/SnowBorder.png">
-        <img class="cob-web cob-web-bottom-left" src="Assets/Images/SnowBorder.png">
-        <img class="cob-web cob-web-bottom-right" src="Assets/Images/SnowBorder.png">
+        <img class="snowflakeFront snowflakeFront-top-left" src="Assets/Images/SnowBorder.png">
+        <img class="snowflakeFront snowflakeFront-top-right" src="Assets/Images/SnowBorder.png">
+        <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
+        <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
         <img class="card-value" src="Assets/Images/Elf.png">
       </div>
     </div>
@@ -171,10 +170,10 @@
         <img class="snowflake" src="Assets/Images/Snowflake.png">
       </div>
       <div class="card-front card-face">
-        <img class="cob-web cob-web-top-left" src="Assets/Images/SnowBorder.png">
-        <img class="cob-web cob-web-top-right" src="Assets/Images/SnowBorder.png">
-        <img class="cob-web cob-web-bottom-left" src="Assets/Images/SnowBorder.png">
-        <img class="cob-web cob-web-bottom-right" src="Assets/Images/SnowBorder.png">
+        <img class="snowflakeFront snowflakeFront-top-left" src="Assets/Images/SnowBorder.png">
+        <img class="snowflakeFront snowflakeFront-top-right" src="Assets/Images/SnowBorder.png">
+        <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
+        <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
         <img class="card-value" src="Assets/Images/Elf.png">
       </div>
     </div>
@@ -183,10 +182,10 @@
         <img class="snowflake" src="Assets/Images/Snowflake.png">
       </div>
       <div class="card-front card-face">
-        <img class="cob-web cob-web-top-left" src="Assets/Images/SnowBorder.png">
-        <img class="cob-web cob-web-top-right" src="Assets/Images/SnowBorder.png">
-        <img class="cob-web cob-web-bottom-left" src="Assets/Images/SnowBorder.png">
-        <img class="cob-web cob-web-bottom-right" src="Assets/Images/SnowBorder.png">
+        <img class="snowflakeFront snowflakeFront-top-left" src="Assets/Images/SnowBorder.png">
+        <img class="snowflakeFront snowflakeFront-top-right" src="Assets/Images/SnowBorder.png">
+        <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
+        <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
         <img class="card-value" src="Assets/Images/Socks.jpg">
       </div>
     </div>
@@ -195,10 +194,10 @@
         <img class="snowflake" src="Assets/Images/Snowflake.png">
       </div>
       <div class="card-front card-face">
-        <img class="cob-web cob-web-top-left" src="Assets/Images/SnowBorder.png">
-        <img class="cob-web cob-web-top-right" src="Assets/Images/SnowBorder.png">
-        <img class="cob-web cob-web-bottom-left" src="Assets/Images/SnowBorder.png">
-        <img class="cob-web cob-web-bottom-right" src="Assets/Images/SnowBorder.png">
+        <img class="snowflakeFront snowflakeFront-top-left" src="Assets/Images/SnowBorder.png">
+        <img class="snowflakeFront snowflakeFront-top-right" src="Assets/Images/SnowBorder.png">
+        <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
+        <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
         <img class="card-value" src="Assets/Images/Socks.jpg">
       </div>
     </div>
@@ -207,10 +206,10 @@
         <img class="snowflake" src="Assets/Images/Snowflake.png">
       </div>
       <div class="card-front card-face">
-        <img class="cob-web cob-web-top-left" src="Assets/Images/SnowBorder.png">
-        <img class="cob-web cob-web-top-right" src="Assets/Images/SnowBorder.png">
-        <img class="cob-web cob-web-bottom-left" src="Assets/Images/SnowBorder.png">
-        <img class="cob-web cob-web-bottom-right" src="Assets/Images/SnowBorder.png">
+        <img class="snowflakeFront snowflakeFront-top-left" src="Assets/Images/SnowBorder.png">
+        <img class="snowflakeFront snowflakeFront-top-right" src="Assets/Images/SnowBorder.png">
+        <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
+        <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
         <img class="card-value" src="Assets/Images/Candycane.png">
       </div>
     </div>
@@ -219,10 +218,10 @@
         <img class="snowflake" src="Assets/Images/Snowflake.png">
       </div>
       <div class="card-front card-face">
-        <img class="cob-web cob-web-top-left" src="Assets/Images/SnowBorder.png">
-        <img class="cob-web cob-web-top-right" src="Assets/Images/SnowBorder.png">
-        <img class="cob-web cob-web-bottom-left" src="Assets/Images/SnowBorder.png">
-        <img class="cob-web cob-web-bottom-right" src="Assets/Images/SnowBorder.png">
+        <img class="snowflakeFront snowflakeFront-top-left" src="Assets/Images/SnowBorder.png">
+        <img class="snowflakeFront snowflakeFront-top-right" src="Assets/Images/SnowBorder.png">
+        <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
+        <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
         <img class="card-value" src="Assets/Images/Candycane.png">
       </div>
     </div>
