Added subtitles to cards

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
         <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
         <img class="card-value" src="Assets/Images/Santa.png">
+        <h3>Santa Claus</h3>
       </div>
     </div>
     <div class="card">
@@ -55,6 +56,7 @@
         <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
         <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
         <img class="card-value" src="Assets/Images/Santa.png">
+        <h3>Santa Claus</h3>
       </div>
     </div>
     <div class="card">
@@ -67,6 +69,7 @@
         <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
         <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
         <img class="card-value" src="Assets/Images/Gift.png">
+        <h3>Gift</h3>
       </div>
     </div>
     <div class="card">
@@ -79,6 +82,7 @@
         <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
         <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
         <img class="card-value" src="Assets/Images/Gift.png">
+        <h3>Gift</h3>
       </div>
     </div>
     <div class="card">
@@ -91,6 +95,7 @@
         <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
         <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
         <img class="card-value" src="Assets/Images/Tree.png">
+        <h3>Christmas Tree</h3>
       </div>
     </div>
     <div class="card">
@@ -103,6 +108,7 @@
         <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
         <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
         <img class="card-value" src="Assets/Images/Tree.png">
+        <h3>Christmas Tree</h3>
       </div>
     </div>
     <div class="card">
@@ -115,6 +121,7 @@
         <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
         <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
         <img class="card-value" src="Assets/Images/Reindeer.png">
+        <h3>Reindeer</h3>
       </div>
     </div>
     <div class="card">
@@ -127,6 +134,7 @@
         <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
         <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
         <img class="card-value" src="Assets/Images/Reindeer.png">
+        <h3>Reindeer</h3>
       </div>
     </div>
     <div class="card">
@@ -139,6 +147,7 @@
         <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
         <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
         <img class="card-value" src="Assets/Images/Snow.jpg">
+        <h3>Snowflake</h3>
       </div>
     </div>
     <div class="card">
@@ -151,6 +160,7 @@
         <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
         <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
         <img class="card-value" src="Assets/Images/Snow.jpg">
+        <h3>Snowflake</h3>
       </div>
     </div>
     <div class="card">
@@ -163,6 +173,7 @@
         <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
         <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
         <img class="card-value" src="Assets/Images/Elf.png">
+        <h3>Elf</h3>
       </div>
     </div>
     <div class="card">
@@ -175,6 +186,7 @@
         <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
         <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
         <img class="card-value" src="Assets/Images/Elf.png">
+        <h3>Elf</h3>
       </div>
     </div>
     <div class="card">
@@ -187,6 +199,7 @@
         <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
         <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
         <img class="card-value" src="Assets/Images/Socks.jpg">
+        <h3>Socks</h3>
       </div>
     </div>
     <div class="card">
@@ -199,6 +212,7 @@
         <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
         <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
         <img class="card-value" src="Assets/Images/Socks.jpg">
+        <h3>Socks</h3>
       </div>
     </div>
     <div class="card">
@@ -211,6 +225,7 @@
         <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
         <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
         <img class="card-value" src="Assets/Images/Candycane.png">
+        <h3>Candy Cane</h3>
       </div>
     </div>
     <div class="card">
@@ -223,6 +238,7 @@
         <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
         <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
         <img class="card-value" src="Assets/Images/Candycane.png">
+        <h3>Candy Cane</h3>
       </div>
     </div>
   </div>
